	Add computer select

	* sql/functions/log/activate_logging.sql: Also log in schema debconf

	* rails/app/views/pentabarf/_person_contact.rxml: Add emergency
	contact

	* rails/app/controllers/pentabarf_controller.rb
	(PentabarfController::person): Add @dc_person
	(PentabarfController::save_event): Save event license
	(PentabarfController::save_person): Save dc_person and dc_conference_person

	* rails/app/views/submission/_person_travel.rxml: Add
	f_public_data and accommodation selection, hide upstreams
	accommodation box.
	Rename f_public_data to public_data

	* rails/app/controllers/submission_controller.rb
	(SubmissionController::person): Add @dc_conference_person
	(SubmissionController::save_event): save event_license.
	(SubmissionController::save_person): Save dc_person and dc_conference_person

2008-01-26  Joerg Jaspert  <joerg@debian.org>

	* rails/app/views/submission/_person_contact.rxml: add
	emergency_contact back

	* rails/app/views/submission/_person_account.rxml: Add
	subscription links to debconf-{announce,discuss}

	* rails/app/controllers/submission_controller.rb
	(SubmissionController::event): Add @dc_event
	(SubmissionController::person): Add @dc_person

	* rails/app/views/pentabarf/_event_general.rxml: Add event license
	
	* rails/app/views/submission/_event_general.rxml: Add event license
	Add information about multiple speakers

	* rails/app/views/pentabarf/_sidebar.rxml: Add dc7/8 links

	* rails/app/views/user/_sidebar.rxml: dito

	* rails/app/views/submission/_sidebar.rxml: dito

	* rails/app/views/admin/_sidebar.rxml: dito

	* TODO: Added

	* rails/app/views/report/expenses.rxml: Rename columns

	* rails/lib/token.rb (Token): Add missing require 'digest/sha1'

	* rails/app/models/deb_conf.rb: Add a model for the debconf schema

	* rails/app/controllers/pentabarf_controller.rb
	(PentabarfController::person): Add @dc_conference_person
	(PentabarfController::event): Add event license field
